fix: toc on mobile

--- a/astro/src/components/patterns/PostHeader/PostHeader.css
+++ b/astro/src/components/patterns/PostHeader/PostHeader.css
@@ -1,12 +1,16 @@
 @layer patterns {
   .post-header {
     padding: 0;
-    margin: var(--space-10) 0;
+    margin: var(--space-4) 0;
     display: flex;
     flex-direction: column;
     gap: var(--space-6);
     justify-content: center;
     align-items: center;
+
+    @media (--md-up) {
+      margin: var(--space-10) 0;
+    }
   }
 
   .post-header__title {
